# PA_Agent

./: .gitignore  CODE_REVIEW_2026-05-20.md  PA_Agent使用文档.md  README.md  pa_agent_403_fix_20260610_2340.md  pyproject.toml
config/: feishu.example.json  settings.example.json
docs/: 基本面多维分析_实现规格_for_Kiro.md
pa_agent/: app_context.py  main.py
pa_agent/ai/: anthropic_compat.py  decision_nodes.py  decision_stance.py  deepseek_client.py  json_validator.py  liquidity_grab.py  pattern_routing.py  prompt_assembler.py  qclaw_connector.py  qclaw_relay.py  qclaw_relay_manager.py  retry_feedback.py  retry_policy.py  router.py  session_ledger.py  stage1_normalizer.py  stage2_normalizer.py  trace_normalize.py  validation_messages.py
pa_agent/config/: paths.py  settings.py
pa_agent/context/: __init__.py  flow_features.py  fundamental_context.py  macro_snapshot.py  (+4 more)
prompt_engineering/: _止损一致性修复_20260615.md  _矛盾分析报告.md  上涨通道交易策略.txt  上涨通道分析识别.txt  下跌通道交易策略.txt  下跌通道分析识别.txt  二元决策.txt  基本面分析方法.txt  多维分析_基本面与宏观.txt  市场诊断框架.txt  提示词大纲_人设与思维方式.txt  文件13-窄通道与宽通道策略.txt  文件15-二次入场机会.txt  文件16-K线信号识别.txt  文件17-止损和止盈与仓位管理.txt  文件21-铁丝网与无交易环境.txt  文件23-假突破与流动性扫单.txt  极速上涨交易策略.txt  极速上涨分析识别.txt  极速下跌交易策略.txt  极速下跌分析识别.txt  震荡区间交易策略.txt  震荡区间分析识别.txt
terminals/: 1.txt
tools/: _diag_19000_auth.py  _diag_19000_exact.py  _diag_19000_full.py  _diag_19000_gateway.py  _diag_19000_llmkey.py  _diag_19000_modelroute.py  _diag_19000_node.js  _diag_19000_openai_sdk.py  _diag_exec_env.py  _tools_catalog.json  diag_qclaw_19000.py  qclaw_gateway_token.py  run_diag_19000_gateway.py  run_diag_auth_modes.py  run_diag_exact_sessions.py  run_diag_exec_env.py  run_diag_llmkey.py  run_diag_modelroute.py  run_diag_node.js  run_diag_openai_sdk.py  run_diag_via_agent_exec.py
(+54 files in other folders)
