[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-agent"
version = "0.1.0"
description = "Price Action AI assistant: MT5 kline data, two-stage LLM analysis (AGPL-3.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "PA Agent Team" }]
dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "openai>=1.40",
    "tiktoken>=0.7",
    "jsonschema>=4.22",
    "pydantic>=2.7",
    "MetaTrader5>=5.0; sys_platform == 'win32'",
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git",
    "cryptography>=42",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
ashare = [
    "akshare>=1.14",
    "baostock>=0.8",
    "curl_cffi>=0.13",
]
equity = [
    "yfinance>=0.2.40",
]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "hypothesis>=6",
    "ruff>=0.5",
    "black>=24.4",
]

[project.scripts]
pa-agent = "pa_agent.main:main"

[tool.setuptools.packages.find]
include = ["pa_agent*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: unit-level tests",
    "property: property-based tests (hypothesis)",
    "integration: integration tests crossing module boundaries",
    "e2e: end-to-end smoke tests",
    "live: requires real API key via environment variable (never uses config/settings.json)",
]
